--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
         <title>
             Etch-a-sketch
         </title>
-        <link href='style.css' type='text/stylesheet'>
+        <link rel ="stylesheet" href='style.css'/>
     </head>
     <body>
         <h1 class='heading' id='h1'>Etch-A-Sketch</h1>
+        <div class='body'>
         <div class='buttons' id='buttons'>
-            <button class='generate' id='generate'>Generate</button>
-            <button class='rainbow' id='rainbow'>Rainbow</button>
-            <button class='black' id='black'>Black</button>
-            <button class='eraser' id='eraser'>Eraser</button>
+            <button class='generate' id='generate'>Generate</button><br>
+            <button class='rainbow' id='rainbow'>Rainbow</button><br>
+            <button class='black' id='black'>Black</button><br>
+            <button class='eraser' id='eraser'>Eraser</button><br>
             <button class='clear' id='clear'>Clear</button>
         </div>
-        <div id='container'></div>
+        <div class="container" id='container'></div>
+        </div>
         <script type='text/javascript' src='app.js'></script>
     </body>
 </html>
